add sick mouse effect

--- a/style.css
+++ b/style.css
@@ -71,3 +71,29 @@ body {
     text-decoration: none;
     color: black;
 }
+
+#blob {
+    background-color: white;
+    height: 20vmax;
+    aspect-ratio: 1;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    translate: -50% -50%;
+    border-radius: 50%;
+    background: linear-gradient(to right, aquamarine, mediumpurple);
+    animation: rotate 20s infinite;
+    opacity: 0.8;
+}
+
+/* #blur covers entire screen */
+#blur {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background: linear-gradient(to right, aquamarine, mediumpurple); */
+    backdrop-filter: blur(100px);
+    z-index: 0;
+}
