--- a/style.css
+++ b/style.css
@@ -111,3 +111,42 @@ body {
   backdrop-filter: blur(100px);
   z-index: 0;
 }
+
+.settings {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 20px;
+  box-sizing: border-box;
+  z-index: 1;
+  color: var(--hex-gradient-1);
+}
+
+.sidemenu {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 99%;
+  background-color: var(--background-color);
+  border: 3px solid var(--hex-gradient-1);
+  border-radius: 15px 0 0 15px;
+  z-index: 1;
+  transform: translateX(+100%);
+  transition: transform 400ms ease;
+}
+
+.sidemenu.active {
+  transform: translateX(0);
+}
+
+.close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 10px;
+  box-sizing: border-box;
+  color: var(--hex-gradient-1);
+  cursor: pointer;
+  z-index: -1;
+}
