--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ body {
   background: linear-gradient(to right, aquamarine, mediumpurple);
   animation: rotate 20s infinite;
   opacity: 0.8;
+  display: none;
 }
 
 /* #blur covers entire screen */
@@ -214,4 +215,24 @@ input:checked + label:after {
 
 label:active:after {
 	width: 40px;
+}
+
+.update-button {
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:0.1em solid var(--hex-gradient-2);
+  margin:0 0.3em 0.3em 0;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  color: var(--hex-gradient-2);
+  text-align:center;
+  transition: all 0.2s;
+}
+
+.update-button:hover {
+  color: var(--background-color);
+  background-color: var(--hex-gradient-1);
 }
